# coordinated-robot-search

./: .gitignore  .gitmodules  Dockerfile  README.md  TODO.md  enter-docker.sh  flake.nix  problem_statement.md
.hooks/: pre-commit  pre-push
botbrain/: Cargo.toml
botbrain/src/: camera.rs  debug.rs  debug_soup.rs  grid.rs  lib.rs  lidar.rs  messaging.rs  params.rs  scaled_grid.rs  shapes.rs  utils.rs
botbrain/src/behaviors/: avoid_obstacles.rs  circle.rs  common.rs  dumb.rs  mod.rs  nothing.rs  rl.rs  search.rs
botbrain/src/behaviors/rl/: action.rs  mod.rs  model.rs  state.rs
botbrain/src/behaviors/rl/action/: minimal.rs  mod.rs  slider.rs  square.rs
botbrain/src/behaviors/rl/model/: mod.rs  small.rs  tiny.rs
botbrain/src/behaviors/rl/network/: big.rs  large.rs  medium.rs  mod.rs  single_layer.rs  small.rs  tiny.rs
botbrain/src/behaviors/rl/robots/: bigboy.rs  medium_polar.rs  minimal.rs  mod.rs  polar.rs  small.rs  small_polar.rs  small_solo.rs  tiny_polar.rs
botbrain/src/behaviors/rl/robots/weights/: polar.json
botbrain/src/behaviors/rl/state/: mod.rs  polar.rs  single_ray.rs  small.rs  small_solo.rs  tiny_polar.rs
botbrain/src/behaviors/search/: costmap.rs  frontiers.rs  mod.rs  pathing.rs
botbrain/src/brains/: mod.rs
botplot/: pyproject.toml
botplot/src/botplot/: __init__.py  colcon_workspace.py  colors.py  crate.py  rust_crate.py  utils.py
dockertest/: Dockerfile
object-detection/: Cargo.toml  flake.nix
plotting/: bytes.py  converage.py  coverage.py  frontier_eval_params.py  many.py  multiple_runs.py  paths.py  performance.py  place_robots.py  plot.py  ros.py  sim_consistency.py  spread.py
rapport/: .blatex.toml  main.tex
report/: .gitignore  appendix.tex  generate-markdown-pdfs.sh  main.tex  sources.bib
ros2/ros_ws/src/multi_robot_control/: CMakeLists.txt  Cargo.toml  package.xml
ros2/ros_ws/src/multi_robot_control/config/maps/: test_map.pgm  test_map.yaml
ros2/ros_ws/src/multi_robot_control/config/worlds/: depot.sdf
ros2/ros_ws/src/multi_robot_control/launch/: multi_robot.launch.py
ros2/ros_ws/src/multi_robot_control/src/ros_agent/: convert_msg.rs  main.rs
ros2/ros_ws/src/multi_robot_control/src/ros_agent_msg_printer/: main.rs
ros2/ros_ws/src/multi_robot_control/src/search_agent/: convert_msg.rs  main.rs
ros2/ros_ws/src/multi_robot_control/src/search_agent_msg_printer/: main.rs
ros2/ros_ws/src/multirobot_testing/: CMakeLists.txt  Cargo.toml  package.xml
ros2/ros_ws/src/multirobot_testing/launch/: multirobot.launch.py
ros2/ros_ws/src/search_agent/: CMakeLists.txt  Cargo.toml  package.xml
ros2/ros_ws/src/search_agent/src/: convert_msg.rs  main.rs  ros2.rs
ros2/ros_ws/src/search_agent_msg_printer/: CMakeLists.txt  Cargo.toml  package.xml
ros2/ros_ws/src/search_agent_msg_printer/src/: main.rs
ros2/ros_ws/src/search_agent_msg_relay/: package.xml  relay.launch.py  setup.cfg  setup.py
ros2/ros_ws/src/search_agent_msg_relay/launch/: relay_robots.launch.py
ros2/ros_ws/src/search_agent_msg_relay/resource/: search_agent_msg_relay
ros2/ros_ws/src/search_agent_msg_relay/search_agent_msg_relay/: search_agent_msg_relay.py
ros2/ros_ws/src/tester_r2r_multible/: CMakeLists.txt  Cargo.toml  package.xml
ros2/ros_ws/src/tester_r2r_multible/src/: main_0.rs
ros2/test_r2r_ws/src/echolist/: CMakeLists.txt  Cargo.toml  package.xml
ros2/test_r2r_ws/src/echolist/src/: main.rs
ros_ws/install/nav2_msgs/share/nav2_msgs/rust/: Cargo.toml
ros_ws/install/nav2_msgs/share/nav2_msgs/rust/src/: action.rs  msg.rs  srv.rs
ros_ws/src/multi_robot_control/: CMakeLists.txt  Cargo.toml  out.ipc  package.xml  r2r_cargo.cmake
ros_ws/src/multi_robot_control/.r2r/: r2r_cargo.cmake
ros_ws/src/multi_robot_control/config/nav2/: amcl.yaml
ros_ws/src/multi_robot_control/config/rviz/: map_overlay.rviz
ros_ws/src/multi_robot_control/config/worlds/: depot.sdf  enviornment.sdf.xacro
ros_ws/src/multi_robot_control/config/worlds/warehouse/: model.config  model.sdf
ros_ws/src/multi_robot_control/launch/: multi_robot.launch.py  multi_robot_map_overlay.launch.py
ros_ws/src/multi_robot_control/src/data_logger/: main.rs
ros_ws/src/multi_robot_control/src/map_overlay_testing/: convert_msg.rs  main.rs
ros_ws/src/multi_robot_control/src/ros2time/: main.rs
ros_ws/src/multi_robot_control/src/ros_agent/: agent.rs  camera_info.rs  convert_msg.rs  main.rs  map_handler.rs  msg.md  util.rs  vision.rs
ros_ws/src/multi_robot_control/src/ros_agent/vision/: mod.rs  object_detection.rs
ros_ws/src/multi_robot_control/src/ros_agent_msg_printer/: main.rs
ros_ws/src/multi_robot_control/src/ros_agent_stats/: main.rs
ros_ws/src/multi_robot_control/src/tf_topic_combiner/: main.rs
ros_ws/src/vision/: CMakeLists.txt  Cargo.toml  package.xml
ros_ws/src/vision/.cargo/: config.toml
ros_ws/src/vision/config/rviz/: config.rviz
ros_ws/src/vision/config/worlds/: depot.sdf
ros_ws/src/vision/launch/: multi_robot_vision.launch.py
ros_ws/src/vision/src/vision/: agent.rs  camera.rs  camera_info.rs  main.rs  vision.rs
rossim/: Cargo.toml
rossim/src/: main.rs  main_ros.rs  ros2.rs  sim.rs  world.rs
rossim/src/gui/: app.rs  bind_key.rs  mod.rs
simple_sim/: .nvim.lua  Cargo.toml
simple_sim/src/: cli.rs  grid.rs  lib.rs  main.rs  scenario.rs  sim.rs  utils.rs  world.rs
simple_sim/src/gui/: app.rs  bind_key.rs  camera.rs  mod.rs
simple_sim/src/sim/: collisions.rs  mod.rs  pool.rs  robot_pool.rs  step.rs
simple_sim/src/world/: description.rs  mod.rs  pgm.rs
simple_sim/worlds/bitmap/map_test/: test_map.yaml
simple_sim/worlds/objectmap/: medium_empty.ron  medium_simple.ron  small_empty.ron  small_simple.ron
simple_sim/worlds/scenarios/: many_robots.scenario.ron  simple.scenario.ron
trainer/: .gitignore  Cargo.toml  visualize.py
trainer/src/: cli.rs  enviornment.rs  main.rs  memory.rs  utils.rs
trainer/src/place_robots/: mod.rs
trainer/src/train/: enviornment.rs  memory.rs  mod.rs
trainer/src/trainer/: main.rs
trainer/src/world_gen/: mod.rs
trainer/src/world_to_img/: mod.rs
trainer/src/worldgen/: main.rs
(+295 files in other folders)
