[package]
name = "botbrain"
version = "0.1.0"
edition = "2021"

[features]
default = ["bin-msgs"]
cli = ["clap"]
bin-msgs = ["bytemuck", "emath/bytemuck", "bincode", "bincode_derive"]
rl = ["bin-msgs", "burn"]

[dependencies]
emath = { version = "0.30.0", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"]}
clap = { version = "4.5.31", features = ["derive"], optional = true }
rand = "0.9.0"

bytemuck = { version = "1.22.0", features = ["derive"], optional = true }

# Reinforcement learning
burn = { version = "0.16.0", features = ["wgpu"] }
bincode = "=2.0.0-rc.3"        # For burn
bincode_derive = "=2.0.0-rc.3" # For burn
