[package]
name = "botbrain"
version = "0.1.0"
edition = "2021"

[features]
default = ["bin-msgs"]
cli = ["clap"]
bin-msgs = ["bytemuck", "emath/bytemuck", "bincode", "bincode_derive"]
rl = ["bin-msgs", "burn"]

[dependencies]
emath = { version = "0.30.0", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"]}
rand = "0.9.0"

clap = { version = "4.5.31", features = ["derive"], optional = true }
bytemuck = { version = "1.22.0", features = ["derive"], optional = true }

# Reinforcement learning ('burn' need specific version of 'bincode')
burn = { version = "0.16.0", features = ["wgpu"], optional = true }
bincode = { version = "2.0.0-rc.3", features = ["derive"], optional = true }
bincode_derive = { version = "2.0.0-rc.3", optional = true }
