[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "botplot"
version = "0.1.0"
description = "Simple package for running and plotting simulator data"
dependencies = [
    "polars",
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}
