[package]
name = "rossim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sim"
path = "src/main.rs"

[[bin]]
name = "ros2"
path = "src/main_ros.rs"

[dependencies]
robcore = { path = "../robcore/" }
eframe = { version = "0.30" }
clap = { version = "4.5.28", features = ["derive"] }
r2r = "0.9"
futures = "0.3"
