[package]
name = "simple_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
robcore = { path = "../robcore/", features = ["cli"] }
eframe = { version = "0.30.0" }
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
ron = "0.8.1"
serde_yml = "0.0.12"
