[package]
name = "simple_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
botbrain = { path = "../botbrain/", features = ["cli"] }
eframe = { version = "0.30.0" }
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
ron = "0.8.1"
serde_yml = "0.0.12"
serde_json = "1.0.140"
polars = { version = "0.46.0", features = ["ipc", "parquet"] }
