[package]
name = "simple_sim"
version = "0.1.0"
edition = "2021"

[features]
default = ["rl"]
rl = ["botbrain/rl"]
single-thread = []

[dependencies]
botbrain = { path = "../botbrain/", features = ["cli"] }
eframe = { version = "0.30.0" }
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
ron = "0.8.1"
serde_yml = "0.0.12"
serde_json = "1.0.140"
clap-stdin = "0.6.0"
arrow-ipc = "55.0.0"
arrow-schema = "55.0.0"
arrow-array = "55.0.0"
image = "0.25.6"
