[package]
name = "trainer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trainer"
path = "src/trainer/main.rs"

[[bin]]
name = "worldgen"
path = "src/worldgen/main.rs"

[dependencies]
botbrain = { path = "../botbrain" }
simple_sim = { path = "../simple_sim", features = ["single-thread"] }

serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.35", features = ["derive"] }
rand = "0.9.0"
ringbuffer = "0.15.0"
burn = { version = "0.16.0", features = ["train", "wgpu", "autodiff"] }
bincode = "=2.0.0-rc.3"        # For burn
bincode_derive = "=2.0.0-rc.3" # For burn
serde_json = "1.0.140"
