[package]
name = "multi_robot_control"
version = "0.1.0"
authors = ["Mathias Balling <math260r@gmail.com>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[[bin]]
name = "tf_topic_combiner"
path = "./src/tf_topic_combiner/main.rs"

[[bin]]
name = "ros_agent"
path = "./src/ros_agent/main.rs"

[[bin]]
name = "ros_agent_msg_printer"
path = "./src/ros_agent_msg_printer/main.rs"

[[bin]]
name = "map_overlay_testing"
path = "./src/map_overlay_testing/main.rs"

[dependencies]
r2r = "0.9"
botbrain = { path = "../../../botbrain", features = ["cli", "serde-bin"] }
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde-binary = "0.5.0"
