[package]
name = "multi_robot_control"
version = "0.1.0"
authors = ["Mathias Balling <math260r@gmail.com>"]
edition = "2024"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[[bin]]
name = "tf_topic_combiner"
path = "./src/tf_topic_combiner/main.rs"

[[bin]]
name = "ros_agent"
path = "./src/ros_agent/main.rs"

[[bin]]
name = "ros_agent_stats"
path = "./src/ros_agent_stats/main.rs"

[[bin]]
name = "ros_agent_msg_printer"
path = "./src/ros_agent_msg_printer/main.rs"

[[bin]]
name = "data_logger"
path = "./src/data_logger/main.rs"

[dependencies]
botbrain = { path = "../../../botbrain", features = ["cli", "bin-msgs", "rl"] }
clap = { version = "4.5.31", features = ["derive"] }
serde-binary = "0.5.0"

r2r = "0.9"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

opencv = { version = "0.94", features = ["clang-runtime"] }
arrow-array = "55.0.0"
arrow-schema = "55.0.0"
