<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>multi_robot_control</name>
  <version>0.0.1</version>
  <description>Control variable number of robots</description>
  <maintainer email="math260r@gmail.com">Mathias Balling</maintainer>
  <license>MIT</license>
  <author>Mathias Balling</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>rcl_action</build_depend> 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>ros_agent_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>rcl_action</exec_depend> 
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>ros_agent_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
