[package]
name = "multi_robot_control"
version = "0.1.0"
authors = ["Mathias Balling <math260r@gmail.com>"]
edition = "2024"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[[bin]]
name = "vision"
path = "./src/vision/main.rs"


[dependencies]
r2r = "0.9"
opencv = { version = "0.94", features = ["clang-runtime"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
botbrain = { path = "../../../botbrain/" }
