[package]
name = "search_agent"
version = "0.1.0"
authors = ["Mathias Balling <math260r@gmail.com>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.9"
futures = "0.3.15"
robcore = { path = "../../../../robcore", features = ["cli", "serde-bin"] }
clap = { version = "4.5.31", features = ["derive"] }
