[package]
name = "search_agent_msg_printer"
version = "0.1.0"
authors = ["Mathias Balling <math260r@gmail.com>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.9"
futures = "0.3.15"
botbrain = { path = "../../../../botbrain", features = ["serde-bin"] }
serde-binary = "0.5.0"
