<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>search_agent_msg_printer</name>
  <version>0.0.1</version>
  <description>Print search agent messages nicely</description>
  <maintainer email="balderwh@gmail.com">Balder Holst</maintainer>
  <license>MIT</license>
  <author>Mathias Balling</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>rcl_action</build_depend>
  <build_depend>search_agent_msgs</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>rcl_action</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
