<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>search_agent_msg_relay</name>
  <version>0.0.0</version>

  <description>Node that relays the `msg_send` and `msg_recv` topics from a robot to a global communication topic</description>
  <maintainer email="balderwh@gmail.com">Balder Holst</maintainer>
  <license>MIT</license>

  <depend>search_agent_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
