[package]
name = "tester_r2r_multible"
version = "0.1.0"
authors = ["Mathias Balling <math260r@gmail.com>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[[bin]]
name = "tester_r2r_0"
path = "src/main_0.rs"

[[bin]]
name = "tester_r2r_1"
path = "src/main_1.rs"

[dependencies]
r2r = "0.9"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
