[package]
name = "echolist"
version = "0.1.0"
authors = ["Mathias Balling (math260r@gmail.com)"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.9"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
