[package]
name = "nav2_msgs"
version = "1.3.1"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.4"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }
unique_identifier_msgs = "*"
geometry_msgs = "*"
geographic_msgs = "*"
builtin_interfaces = "*"
service_msgs = "*"
action_msgs = "*"
std_msgs = "*"
nav_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'unique_identifier_msgs/serde', 'geometry_msgs/serde', 'geographic_msgs/serde', 'builtin_interfaces/serde', 'service_msgs/serde', 'action_msgs/serde', 'std_msgs/serde', 'nav_msgs/serde']
